[gd_scene load_steps=15 format=3 uid="uid://lrs3pdwt6rv7"]

[ext_resource type="Script" path="res://game_client/match/field/player/base_player_field.gd" id="1_b2wa6"]
[ext_resource type="PackedScene" uid="uid://bpf65cofrvm0s" path="res://game_client/match/field/parts/played_position.tscn" id="2_qevd1"]
[ext_resource type="FontFile" uid="uid://dttdqnx855wtb" path="res://fonts/ShipporiAntique-Medium.otf" id="3_nn8jw"]
[ext_resource type="PackedScene" uid="uid://buq07v2a7onpv" path="res://game_client/match/field/enchant_display/enchant_display.tscn" id="4_lhaqf"]
[ext_resource type="PackedScene" uid="uid://bulsq8u2pvsua" path="res://game_client/match/field/parts/combat_stats.tscn" id="5_hwcnp"]

[sub_resource type="QuadMesh" id="QuadMesh_omqhk"]
size = Vector2(1, 1.5)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_iq1xn"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rvbv3"]
width = 256
noise = SubResource("FastNoiseLite_iq1xn")

[sub_resource type="BoxShape3D" id="BoxShape3D_ctw2y"]
size = Vector3(1.5, 3, 0.1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfou3"]
bg_color = Color(0, 0, 0, 0.752941)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_fvrkd"]
font = ExtResource("3_nn8jw")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dkbr4"]
font_size = 66
font_color = Color(0, 0.360784, 1, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_70d2k"]
font_size = 81
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fpaqe"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="PlayerField" type="Node3D"]
script = ExtResource("1_b2wa6")

[node name="DeckPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9, -1.7, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="DeckPosition"]
visible = false
mesh = SubResource("QuadMesh_omqhk")

[node name="CombatPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="CombatPosition"]
mesh = SubResource("QuadMesh_omqhk")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="CombatPosition"]
bus = &"SE"

[node name="PlayedPosition" parent="." instance=ExtResource("2_qevd1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9, -0.2, 0)

[node name="AvatarPosition" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -0.5)
pixel_size = 0.006
texture = SubResource("NoiseTexture2D_rvbv3")
region_rect = Rect2(0, 0, 150, 300)

[node name="Area3D" type="Area3D" parent="AvatarPosition"]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AvatarPosition/Area3D"]
shape = SubResource("BoxShape3D_ctw2y")

[node name="CardHolder" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LabelName" type="Label" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -43.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(120, 20)
auto_translate = false
theme_override_styles/normal = SubResource("StyleBoxFlat_tfou3")
text = "名前"
label_settings = SubResource("LabelSettings_fvrkd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
position = Vector2(640, 360)

[node name="EnchantDisplay" parent="CanvasLayer/Node2D" instance=ExtResource("4_lhaqf")]

[node name="CombatStats" parent="CanvasLayer/Node2D" instance=ExtResource("5_hwcnp")]
unique_name_in_owner = true
position = Vector2(40, 0)

[node name="BlockedDamage" type="Node2D" parent="CanvasLayer/Node2D"]
unique_name_in_owner = true
position = Vector2(110, 72)

[node name="LabelBlock" type="Label" parent="CanvasLayer/Node2D/BlockedDamage"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.5
offset_top = -35.0
offset_right = 13.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(19, 47)
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_dkbr4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Damage" type="Node2D" parent="CanvasLayer/Node2D"]
unique_name_in_owner = true
position = Vector2(170, 72)

[node name="LabelDamage" type="Label" parent="CanvasLayer/Node2D/Damage"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.5
offset_top = -35.0
offset_right = 13.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(23, 57)
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_70d2k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StockCount" type="Node2D" parent="CanvasLayer/Node2D"]
position = Vector2(600, 290)

[node name="LabelStockCount" type="Label" parent="CanvasLayer/Node2D/StockCount"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
text = "15"
label_settings = SubResource("LabelSettings_fpaqe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLife" type="Label" parent="CanvasLayer/Node2D/StockCount"]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -26.0
offset_right = -148.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
text = "15"
label_settings = SubResource("LabelSettings_fpaqe")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="clicked" from="PlayedPosition" to="." method="_on_played_position_clicked"]
[connection signal="input_event" from="AvatarPosition/Area3D" to="." method="_on_area_3d_input_event"]
